--- a/pythonanywhere/templates/index.html
+++ b/pythonanywhere/templates/index.html
@@ -741,6 +741,7 @@
       </nav>      
 
     <main>
+        <input type="password" name="fake-password" id="fake-password" style="display:none;" autocomplete="new-password" tabindex="-1" aria-hidden="true">
         <input type="text" id="search-input" placeholder="Search notes...">
         <ul id="notes-list"></ul>
     </main>
