--- a/pythonanywhere/templates/home.html
+++ b/pythonanywhere/templates/home.html
@@ -1168,7 +1168,7 @@
                 </div>
                 <div class="feature-content">
                     <h3>Smart Notes</h3>
-                    <p>Quickly jot down notes with our clean interface. Currently supports plain text with rich text coming soon. Easily share any note with a click and use our powerful search to find what you need.</p>
+                    <p>Quickly jot down notes with our clean interface. Easily share any note with a click and use our powerful search to find what you need.</p>
                     <a href="#" class="feature-btn">Learn more <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
@@ -1255,12 +1255,12 @@
                             <li>Powerful search across all your notes</li>
                             <li>One-click sharing functionality</li>
                             <li>Organize with tags and categories</li>
+                            <li>Rich text formatting (bold, italic, lists)</li>
                         </ul>
                     </div>
                     <div class="feature-benefits">
                         <h4>Coming Soon:</h4>
                         <ul class="benefits-list">
-                            <li>Rich text formatting (bold, italic, lists)</li>
                             <li>Attachment support for images and files</li>
                             <li>Note version history</li>
                             <li>Mobile offline access</li>
