--- a/pythonanywhere/templates/home_dutch.html
+++ b/pythonanywhere/templates/home_dutch.html
@@ -1168,7 +1168,7 @@
                 </div>
                 <div class="feature-content">
                     <h3>Slimme Notities</h3>
-                    <p>Maak snel notities in ons overzichtelijke interface. Momenteel ondersteuning voor normale tekst, met opmaakfuncties in ontwikkeling. Deel notities met één klik en vind wat je zoekt via de krachtige zoekfunctie.</p>
+                    <p>Maak snel notities in ons overzichtelijke interface. Deel notities met één klik en vind wat je zoekt via de krachtige zoekfunctie.</p>
                     <a href="#" class="feature-btn">Meer info <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
@@ -1255,12 +1255,12 @@
                             <li>Krachtige zoekfunctie door al je notities</li>
                             <li>Delen met één klik</li>
                             <li>Organiseren met tags en categorieën</li>
+                            <li>Tekstopmaak (vet, cursief, lijsten)</li>
                         </ul>
                     </div>
                     <div class="feature-benefits">
                         <h4>Binnenkort beschikbaar:</h4>
                         <ul class="benefits-list">
-                            <li>Tekstopmaak (vet, cursief, lijsten)</li>
                             <li>Ondersteuning voor afbeeldingen en bestanden</li>
                             <li>Versiegeschiedenis van notities</li>
                             <li>Offline toegang op mobiel</li>
