--- a/pythonanywhere/templates/index.html
+++ b/pythonanywhere/templates/index.html
@@ -507,6 +507,10 @@
             #search-input {
                 width: 95%;
             }
+            #add-menu button {
+                padding: 5px;
+            }
+            
         }
 
         .view-note-content {
