--- a/pythonanywhere/templates/index.html
+++ b/pythonanywhere/templates/index.html
@@ -511,6 +511,10 @@
                 padding: 4px;
             }
 
+            #update-menu button {
+                padding: 4px;
+            }
+
         }
 
         .view-note-content {
